--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A imobiliária que te ajuda a conquistar o sonho da casa nova">
     <title>Imobiliária</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="imagens/Iconshock-Real-Vista-Real-State-Apartment.ico" type="image/x-icon">
 </head>
 <body>
+
+    <div class="cabecalho">
+
+        <img src="imagens/logo-imobiliaria.png" alt="Logo Imobiliária">
+
+        <a href="#Sobre">Sobre</a>
+        <a href="#Servicos">Serviços</a>
+        <a href="#Corretores">Corretores</a>
+        <a href="#Contato">Contato</a>
+    </div>
     
 </body>
 </html>
