--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         
          <div class="servicos">
 
-             <h2>SERVIÇOS</h2>
+             <h3>SERVIÇOS</h3>
 
-             <p>Contamos com diversos serviços imobiliários e também prestamos suporte em cada uma das etapas necessárias de cada serviço. Aqui na Imobiliária Santos podemos te ajudar com a seguinte gama de assuntos relativos a imóveis:</p>
+             <p>Contamos com diversos <strong>serviços imobiliários</strong> e também prestamos suporte em cada uma das etapas necessárias de cada serviço. Aqui na Imobiliária Marques podemos te ajudar com a seguinte gama de assuntos relativos a imóveis:</p>
 
              <ul>
                 <li>Venda</li>
