--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
              <h3>SERVIÇOS</h3>
 
-             <p>Contamos com diversos <strong>serviços imobiliários</strong> e também prestamos suporte em cada uma das etapas necessárias de cada serviço. Aqui na Imobiliária Marques podemos te ajudar com a seguinte gama de assuntos relativos a imóveis:</p>
+             <p>Contamos com diversos <strong class="servicos1">serviços imobiliários</strong> e também prestamos suporte em cada uma das etapas necessárias de cada serviço. Aqui na <strong class="servicos1">Imobiliária Marques </strong>podemos te ajudar com a seguinte gama de assuntos relativos a imóveis:</p>
 
              <ul>
                 <li>Venda</li>
