--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="imagem">
-        <img class="responsivo" src="imagens/casa-imobiliaria.PNG" width="800" alt="Casa Imobiliaria">
+        <img class="responsivo" src="imagens/casa-imobiliaria.PNG" width="500" alt="Casa Imobiliaria">
     </div>
 
         
@@ -34,6 +34,8 @@
              <h2>Encontre o imóvel dos seus sonhos</h2>
 
             <p class="destaque">A imobiliária que te ajuda no sonho do seu imóvel</p>
+
+            <img src="imagens/imovel-assinatura.jpg" width="450" alt="Imagem assinando o imovél">
 
              <p>Há <strong>10 anos</strong> no ramo temos conquistado a confiança de <strong>inúmeros clientes</strong>. Isso porque procuramos sempre as melhores condições tanto para quem quer comprar, como para quem quer vender ou alugar. Oferecemos um <strong>serviço de qualidade</strong> servindo como ponte entre as partes interessadas.</p>
 
@@ -47,7 +49,7 @@
              <p>Contamos com diversos <strong class="servicos1">serviços imobiliários</strong> e também prestamos suporte em cada uma das etapas necessárias de cada serviço. Aqui na <strong class="servicos1">Imobiliária Marques </strong>podemos te ajudar com a seguinte gama de assuntos relativos a imóveis:</p>
 
              <ul>
-                <li>Venda</li>
+                <li>    Venda</li>
                 <p></p>
                 <li>Aluguel</li>
                 <p></p>
@@ -62,7 +64,7 @@
  
              <h3>CORRETORES</h3>
 
-             <img class="responsivo"  src="imagens/corretores.jpg" width="350" alt="Imagem Corretores">
+             <img class="responsivo"  src="imagens/corretores.jpg" width="450" alt="Imagem Corretores">
 
              <p>A <strong class="servicos2">imobiliária Marques</strong> conta com um time de profissionais qualificados que têm vários anos de experiência no mercado. Para entrar em contato com um de nossos corretores, basta clicar no link a seguir:<a href="">Corretores</a></p>
 
